docs/1.1.x/_sources/ChangeLog.md.txt
(changelog)=

# Changelog

## Version 1.1.0

This update to cppdlr adds significant new functionality, including symmetrized DLR grids, and improvements to ensure accuracy of DLR expansions in L^2(tau) norm (both described in the updated documentation).

We thank all contributors: Thomas Hahn, Alexander Hampel, Jason Kaye, Henri Menke, Hugo U. R. Strand, Nils Wentzell

### New features
* Symmetrized DLR grids, w/ tests to compare symmetrized/non-symmetrized grids
* Documentation updates: symmetrized grids, discussion of error
* Imaginary time quadrature weighting for DLR frequency selection to ensure accuracy in L^2(tau) norm, updated tests accordingly
* Function to compute imaginary time inner products of DLR expansions
* Program to print DLR ranks for various Lambda
* Tests to interpolate in imag time and measure error in imag freq, and vice versa
* Unit tests print errors via fmt
* Implementation of symmetrized pivoted Gram-Schmidt with tolerance or rank specified
* Print warning if user chooses epsilon dangerously small
* Expose fermionic and bosonic Matsubara frequency kernels to user directly

### Bug fixes
* Fixed bosonic kernel at i*om_n=0
* Fixed bug involving non-contiguous views in vals2coefs implementations
* Fixed bug in error checking of fine discretization of imag time kernel in geterr_k_it
* Fixed uninitialized niom value in dlr_imfreq constructor
* Fixed range bug in imtime_ops.interp_matrix_sym_bos

### Optimizations
* Make complex copy of it2cf.lu in imtime_ops constructor to avoid on-the-fly copies
* imtime_ops::convolve optimizations; use nda::matmul when possible

### Other changes
* Various code simplifications
* Test tolerance adjustments
* References to cppdlr preprint in documentation and readme
* Merge latest changes of app4triqs skeleton
* Add ubuntu-intel build to jenkins


## Version 1.0.0

This is the initial release of cppdlr, a C++ library implementing the discrete Lehmann representation of imaginary time Green's functions.

We thank all contributors: Thomas Hahn, Jason Kaye, Hugo U. R. Strand, Nils Wentzell
